Add option to control light border on windows.

--- a/config/qtcurveconfigbase.ui
+++ b/config/qtcurveconfigbase.ui
@@ -1281,7 +1281,15 @@ None - no buttons, only the slider</string>
                             <cstring>titlebarAlignment</cstring>
                         </property>
                     </widget>
-                    <spacer row="5" column="1">
+                    <widget class="QCheckBox" row="4" column="0">
+                        <property name="name">
+                            <cstring>colorTitlebarOnly</cstring>
+                        </property>
+                        <property name="text">
+                            <string>Color titlebar only (KDE4)</string>
+                        </property>
+                    </widget>
+                    <spacer row="6" column="1">
                         <property name="name">
                             <cstring>spacer27</cstring>
                         </property>
@@ -1294,16 +1302,16 @@ None - no buttons, only the slider</string>
                         <property name="sizeHint">
                             <size>
                                 <width>20</width>
-                                <height>330</height>
+                                <height>270</height>
                             </size>
                         </property>
                     </spacer>
-                    <widget class="QCheckBox" row="4" column="0">
+                    <widget class="QCheckBox" row="5" column="0" rowspan="1" colspan="2">
                         <property name="name">
-                            <cstring>colorTitlebarOnly</cstring>
+                            <cstring>titlebarBorder</cstring>
                         </property>
                         <property name="text">
-                            <string>Color titlebar only (KDE4)</string>
+                            <string>Light border (KDE4)</string>
                         </property>
                     </widget>
                 </grid>
@@ -2198,8 +2206,6 @@ None - no buttons, only the slider</string>
         </widget>
     </grid>
 </widget>
-<customwidgets>
-</customwidgets>
 <connections>
     <connection>
         <sender>framelessGroupBoxes</sender>
@@ -2273,6 +2279,7 @@ None - no buttons, only the slider</string>
     <tabstop>titlebarButtonAppearance</tabstop>
     <tabstop>titlebarAlignment</tabstop>
     <tabstop>colorTitlebarOnly</tabstop>
+    <tabstop>titlebarBorder</tabstop>
     <tabstop>toolbarBorders</tabstop>
     <tabstop>handles</tabstop>
     <tabstop>menubarAppearance</tabstop>
@@ -2319,12 +2326,20 @@ None - no buttons, only the slider</string>
 </tabstops>
 <layoutdefaults spacing="6" margin="11"/>
 <includehints>
+    <includehint>kpushbutton.h</includehint>
     <includehint>kcolorbutton.h</includehint>
+    <includehint>knuminput.h</includehint>
     <includehint>knuminput.h</includehint>
     <includehint>kcolorbutton.h</includehint>
     <includehint>kcolorbutton.h</includehint>
     <includehint>kcolorbutton.h</includehint>
     <includehint>kcolorbutton.h</includehint>
+    <includehint>knuminput.h</includehint>
+    <includehint>knuminput.h</includehint>
+    <includehint>kpushbutton.h</includehint>
+    <includehint>kpushbutton.h</includehint>
+    <includehint>kpushbutton.h</includehint>
+    <includehint>knuminput.h</includehint>
     <includehint>knuminput.h</includehint>
     <includehint>knuminput.h</includehint>
     <includehint>knuminput.h</includehint>
