--- a/config/qtcurveconfigbase.ui
+++ b/config/qtcurveconfigbase.ui
@@ -415,22 +415,6 @@
                             <string></string>
                         </property>
                     </widget>
-                    <widget class="QLabel" row="2" column="0">
-                        <property name="name">
-                            <cstring>textLabel7</cstring>
-                        </property>
-                        <property name="text">
-                            <string>Style:</string>
-                        </property>
-                    </widget>
-                    <widget class="QComboBox" row="2" column="1">
-                        <property name="name">
-                            <cstring>sliderStyle</cstring>
-                        </property>
-                        <property name="whatsThis" stdset="0">
-                            <string>This setting only affects standard sliders - i.e. not scrollbar sliders. 'Triangular' is a very similar style to plastik's sliders.</string>
-                        </property>
-                    </widget>
                     <spacer row="1" column="3">
                         <property name="name">
                             <cstring>spacer14</cstring>
@@ -448,15 +432,90 @@
                             </size>
                         </property>
                     </spacer>
-                    <widget class="QLabel" row="5" column="0">
+                    <widget class="QComboBox" row="0" column="1">
                         <property name="name">
-                            <cstring>textLabel8</cstring>
+                            <cstring>sliderAppearance</cstring>
                         </property>
-                        <property name="text">
-                            <string>Scrollbar buttons:</string>
+                        <property name="whatsThis" stdset="0">
+                            <string>This appearance setting affects both scrollbar sliders, and other sliders.</string>
                         </property>
                     </widget>
-                    <widget class="QCheckBox" row="5" column="2" rowspan="1" colspan="2">
+                    <spacer row="9" column="1">
+                        <property name="name">
+                            <cstring>spacer13</cstring>
+                        </property>
+                        <property name="orientation">
+                            <enum>Vertical</enum>
+                        </property>
+                        <property name="sizeType">
+                            <enum>Expanding</enum>
+                        </property>
+                        <property name="sizeHint">
+                            <size>
+                                <width>20</width>
+                                <height>191</height>
+                            </size>
+                        </property>
+                    </spacer>
+                    <widget class="QComboBox" row="5" column="1">
+                        <property name="name">
+                            <cstring>grooveAppearance</cstring>
+                        </property>
+                    </widget>
+                    <widget class="QComboBox" row="8" column="1">
+                        <property name="name">
+                            <cstring>sliderThumbs</cstring>
+                        </property>
+                        <property name="sizePolicy">
+                            <sizepolicy>
+                                <hsizetype>3</hsizetype>
+                                <vsizetype>0</vsizetype>
+                                <horstretch>0</horstretch>
+                                <verstretch>0</verstretch>
+                            </sizepolicy>
+                        </property>
+                    </widget>
+                    <widget class="QLabel" row="3" column="0">
+                        <property name="name">
+                            <cstring>textLabel7</cstring>
+                        </property>
+                        <property name="text">
+                            <string>Style:</string>
+                        </property>
+                    </widget>
+                    <widget class="QLabel" row="8" column="0">
+                        <property name="name">
+                            <cstring>textLabel8_2</cstring>
+                        </property>
+                        <property name="text">
+                            <string>Scrollbar thumbs:</string>
+                        </property>
+                    </widget>
+                    <widget class="QCheckBox" row="4" column="0">
+                        <property name="name">
+                            <cstring>fillSlider</cstring>
+                        </property>
+                        <property name="text">
+                            <string>Fill used part of groove:</string>
+                        </property>
+                    </widget>
+                    <widget class="QLabel" row="7" column="0">
+                        <property name="name">
+                            <cstring>textLabel8_2_2</cstring>
+                        </property>
+                        <property name="text">
+                            <string>Background</string>
+                        </property>
+                    </widget>
+                    <widget class="QComboBox" row="4" column="1">
+                        <property name="name">
+                            <cstring>sliderFill</cstring>
+                        </property>
+                        <property name="whatsThis" stdset="0">
+                            <string>This appearance setting affects both scrollbar sliders, and other sliders.</string>
+                        </property>
+                    </widget>
+                    <widget class="QCheckBox" row="6" column="2" rowspan="1" colspan="2">
                         <property name="name">
                             <cstring>flatSbarButtons</cstring>
                         </property>
@@ -464,7 +523,39 @@
                             <string>Flat</string>
                         </property>
                     </widget>
-                    <widget class="QComboBox" row="5" column="1">
+                    <widget class="QComboBox" row="3" column="1">
+                        <property name="name">
+                            <cstring>sliderStyle</cstring>
+                        </property>
+                        <property name="whatsThis" stdset="0">
+                            <string>This setting only affects standard sliders - i.e. not scrollbar sliders. 'Triangular' is a very similar style to plastik's sliders.</string>
+                        </property>
+                    </widget>
+                    <widget class="QLabel" row="5" column="0">
+                        <property name="name">
+                            <cstring>textLabel2_5</cstring>
+                        </property>
+                        <property name="text">
+                            <string>Groove appearance:</string>
+                        </property>
+                    </widget>
+                    <widget class="QCheckBox" row="5" column="2" rowspan="1" colspan="2">
+                        <property name="name">
+                            <cstring>thinSbarGroove</cstring>
+                        </property>
+                        <property name="text">
+                            <string>Thin scrollbar groove</string>
+                        </property>
+                    </widget>
+                    <widget class="QLabel" row="6" column="0">
+                        <property name="name">
+                            <cstring>textLabel8</cstring>
+                        </property>
+                        <property name="text">
+                            <string>Scrollbar buttons:</string>
+                        </property>
+                    </widget>
+                    <widget class="QComboBox" row="6" column="1">
                         <property name="name">
                             <cstring>scrollbarType</cstring>
                         </property>
@@ -486,58 +577,7 @@ Next - two buttons at the top/left, none at bottom/right
 None - no buttons, only the slider</string>
                         </property>
                     </widget>
-                    <widget class="QComboBox" row="4" column="1">
-                        <property name="name">
-                            <cstring>grooveAppearance</cstring>
-                        </property>
-                    </widget>
-                    <widget class="QLabel" row="4" column="0">
-                        <property name="name">
-                            <cstring>textLabel2_5</cstring>
-                        </property>
-                        <property name="text">
-                            <string>Groove appearance:</string>
-                        </property>
-                    </widget>
-                    <spacer row="8" column="1">
-                        <property name="name">
-                            <cstring>spacer13</cstring>
-                        </property>
-                        <property name="orientation">
-                            <enum>Vertical</enum>
-                        </property>
-                        <property name="sizeType">
-                            <enum>Expanding</enum>
-                        </property>
-                        <property name="sizeHint">
-                            <size>
-                                <width>20</width>
-                                <height>249</height>
-                            </size>
-                        </property>
-                    </spacer>
-                    <widget class="QLabel" row="7" column="0">
-                        <property name="name">
-                            <cstring>textLabel8_2</cstring>
-                        </property>
-                        <property name="text">
-                            <string>Scrollbar thumbs:</string>
-                        </property>
-                    </widget>
                     <widget class="QComboBox" row="7" column="1">
-                        <property name="name">
-                            <cstring>sliderThumbs</cstring>
-                        </property>
-                        <property name="sizePolicy">
-                            <sizepolicy>
-                                <hsizetype>3</hsizetype>
-                                <vsizetype>0</vsizetype>
-                                <horstretch>0</horstretch>
-                                <verstretch>0</verstretch>
-                            </sizepolicy>
-                        </property>
-                    </widget>
-                    <widget class="QComboBox" row="6" column="1">
                         <property name="name">
                             <cstring>sbarBgndAppearance</cstring>
                         </property>
@@ -550,44 +590,12 @@ None - no buttons, only the slider</string>
                             </sizepolicy>
                         </property>
                     </widget>
-                    <widget class="QLabel" row="6" column="0">
+                    <widget class="QCheckBox" row="2" column="1" rowspan="1" colspan="2">
                         <property name="name">
-                            <cstring>textLabel8_2_2</cstring>
+                            <cstring>colorSliderMouseOver</cstring>
                         </property>
                         <property name="text">
-                            <string>Background</string>
-                        </property>
-                    </widget>
-                    <widget class="QCheckBox" row="3" column="0">
-                        <property name="name">
-                            <cstring>fillSlider</cstring>
-                        </property>
-                        <property name="text">
-                            <string>Fill used part of groove:</string>
-                        </property>
-                    </widget>
-                    <widget class="QComboBox" row="0" column="1">
-                        <property name="name">
-                            <cstring>sliderAppearance</cstring>
-                        </property>
-                        <property name="whatsThis" stdset="0">
-                            <string>This appearance setting affects both scrollbar sliders, and other sliders.</string>
-                        </property>
-                    </widget>
-                    <widget class="QComboBox" row="3" column="1">
-                        <property name="name">
-                            <cstring>sliderFill</cstring>
-                        </property>
-                        <property name="whatsThis" stdset="0">
-                            <string>This appearance setting affects both scrollbar sliders, and other sliders.</string>
-                        </property>
-                    </widget>
-                    <widget class="QCheckBox" row="4" column="2" rowspan="1" colspan="2">
-                        <property name="name">
-                            <cstring>thinSbarGroove</cstring>
-                        </property>
-                        <property name="text">
-                            <string>Thin scrollbar groove</string>
+                            <string>Color only on mouse-over</string>
                         </property>
                     </widget>
                 </grid>
@@ -2274,6 +2282,7 @@ None - no buttons, only the slider</string>
     <tabstop>sliderAppearance</tabstop>
     <tabstop>shadeSliders</tabstop>
     <tabstop>customSlidersColor</tabstop>
+    <tabstop>colorSliderMouseOver</tabstop>
     <tabstop>sliderStyle</tabstop>
     <tabstop>fillSlider</tabstop>
     <tabstop>sliderFill</tabstop>
